--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -69,14 +69,8 @@ jobs:
       - name: 📥 Checkout source code
         uses: actions/checkout@v4
 
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
       - name: 📦 Install Python dependencies
-        run: |
-          pip install --upgrade google-genai google-api-python-client google-auth google-auth-oauthlib
+        run: pip install google-auth google-api-python-client google-genai
 
       # ────────────────────────────────────────────────
       # 1. Tải content.txt từ Google Drive
