add wf download google ai voice

--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -77,6 +77,10 @@ jobs:
     steps:
       - name: 📥 Checkout source code
         uses: actions/checkout@v4
+      - run: |
+          echo "Refresh token length: $GG_REFRESH_TOKEN"
+        env:
+          GG_REFRESH_TOKEN: ${{ secrets.GG_REFRESH_TOKEN }}
 
       - name: 📦 Install Python dependencies
         run: pip install google-auth google-api-python-client google-genai
