add wf download google ai voice

--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -97,7 +97,7 @@ jobs:
       - name: 🗣 Generate TTS
         id: tts
         run: |
-          python gemini_tts_generate.py \
+          python scripts/gemini_tts_generate.py \
             --voice "${{ inputs.voice_name }}" \
             --speed "${{ inputs.speed }}" \
             --input content.txt
