--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -99,7 +99,7 @@ jobs:
         run: |
           python scripts/gemini_tts_generate.py \
             --voice "${{ inputs.voice_name }}" \
-            --speed "${{ inputs.speed }}" \
+            --temp "${{ inputs.speed }}" \
             --input content.txt
           echo "OUTPUT_FILE=$(ls -1 output_*.wav | head -n1)" >> $GITHUB_ENV
 
