--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -98,11 +98,10 @@ jobs:
         id: tts
         run: |
           python scripts/gemini_tts_generate.py \
-            --voice "${{ inputs.voice_name }}" \
-            --temp  "${{ inputs.speed }}" \
-            --input content.txt \
-            --output output_0.wav
-          echo "OUTPUT_FILE=output_0.wav" >> $GITHUB_ENV
+          --voice "${{ inputs.voice_name }}" \
+          --temp  "${{ inputs.speed }}" \
+          --input content.txt
+          echo "OUTPUT_FILE=output.wav" >> $GITHUB_ENV
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
