--- a/.github/workflows/test-gemini-tts-from-drive.yml
+++ b/.github/workflows/test-gemini-tts-from-drive.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📦 Install Python dependencies
-        run: pip install google-auth google-api-python-client google-genai
+        run: pip install google-auth google-api-python-client google-genai nltk
 
       # ────────────────────────────────────────────────
       # 1. Tải content.txt từ Google Drive
