--- a/.github/workflows/1.1process-audio.yml
+++ b/.github/workflows/1.1process-audio.yml
@@ -103,13 +103,23 @@ jobs:
           pip install --upgrade pip
           pip install setuptools-rust openai-whisper
 
-      - name: 🔗 Nối tất cả file .mp3
+      - name: 🔗 Chuẩn hóa định dạng và nối file audio (.mp3 hoặc .wav)
         run: |
-          mkdir -p merged
+          mkdir -p merged fixed_mp3
+          # Tìm toàn bộ file audio có định dạng .mp3 hoặc .wav và sắp xếp
+          find audio -maxdepth 1 -type f \( -iname "*.mp3" -o -iname "*.wav" \) | sort -V > merged/sorted.txt
+      
+          # Duyệt từng file và convert về .mp3 thật sự
+          i=1
           while read f; do
-            echo "file '$PWD/$f'" >> merged/list.txt
+            ffmpeg -y -i "$f" -vn -ar 44100 -ac 2 -b:a 192k "fixed_mp3/$i.mp3"
+            echo "file '$PWD/fixed_mp3/$i.mp3'" >> merged/list.txt
+            i=$((i+1))
           done < merged/sorted.txt
+      
+          # Nối tất cả các file mp3 đã chuẩn hóa
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
+
 
       - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
         run: |
