--- a/.github/workflows/1.1process-audio.yml
+++ b/.github/workflows/1.1process-audio.yml
@@ -108,14 +108,16 @@ jobs:
           mkdir -p merged fixed_mp3
           rm -f merged/sorted.txt merged/list.txt
           
-          # Ghi đường dẫn tuyệt đối file audio (.mp3 hoặc .wav)
-          find "$(pwd)/audio" -maxdepth 1 -type f \( -iname "*.mp3" -o -iname "*.wav" \) | sort -V > merged/sorted.txt
+          # Ghi đường dẫn tuyệt đối
+          find "$(pwd)/audio" -maxdepth 1 -type f \( -iname "*.mp3" -o -iname "*.wav" \) \
+            | sort -V > merged/sorted.txt
           
           echo "📋 Các file được phát hiện:"
           cat merged/sorted.txt
           
           i=1
-          while IFS= read -r f; do
+          while IFS= read -r f || [[ -n $f ]]; do
+            f="${f//$'\r'/}"   # ✂️ loại CR
             echo "🎵 Converting: $f"
             ffmpeg -y -i "$f" -vn -ar 44100 -ac 2 -b:a 256k "fixed_mp3/$i.mp3"
             echo "file '$PWD/fixed_mp3/$i.mp3'" >> merged/list.txt
@@ -124,6 +126,7 @@ jobs:
           
           echo "🧩 Merging files..."
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
+      
       
       
       - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
