--- a/.github/workflows/1.1process-audio.yml
+++ b/.github/workflows/1.1process-audio.yml
@@ -106,23 +106,20 @@ jobs:
       - name: 🔗 Chuẩn hóa định dạng và nối file audio (.mp3 hoặc .wav)
         run: |
           mkdir -p merged fixed_mp3
-          rm -f merged/sorted.txt merged/list.txt
           
-          # Ghi đường dẫn tuyệt đối file audio (.mp3 hoặc .wav)
+          # Tạo danh sách file với đường dẫn tuyệt đối để tránh lỗi đường dẫn sai
           find "$(pwd)/audio" -maxdepth 1 -type f \( -iname "*.mp3" -o -iname "*.wav" \) | sort -V > merged/sorted.txt
-          
-          echo "📋 Các file được phát hiện:"
           cat merged/sorted.txt
           
+          # Convert từng file về mp3 chuẩn
           i=1
           while IFS= read -r f; do
-            echo "🎵 Converting: $f"
             ffmpeg -y -i "$f" -vn -ar 44100 -ac 2 -b:a 256k "fixed_mp3/$i.mp3"
             echo "file '$PWD/fixed_mp3/$i.mp3'" >> merged/list.txt
             i=$((i+1))
           done < merged/sorted.txt
           
-          echo "🧩 Merging files..."
+          # Nối các file mp3 đã chuẩn hóa thành 1 file merged
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
       
       
