config 2 kenh moi

--- a/.github/workflows/full-video-process.yml
+++ b/.github/workflows/full-video-process.yml
@@ -14,6 +14,8 @@ on:
           - dde
           - kunzyPE
           - AnkEL
+          - AnkEL2
+          - kunzyPE2
       folder_url:
         description: "Google Drive folder URL"
         required: true
