--- a/.github/workflows/1.1process-audio.yml
+++ b/.github/workflows/1.1process-audio.yml
@@ -114,7 +114,29 @@ jobs:
       - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
         run: |
           mkdir -p adjusted
-          ffmpeg -i merged/merged.mp3 -filter:a "atempo=$SPEED,volume=$VOLUME" -vn adjusted/audio_adjusted.mp3
+          
+          # Lấy bitrate gốc của track audio (ví dụ 256000 = 256 kbps)
+          BITRATE=$(ffprobe -v error \
+                    -select_streams a:0 \
+                    -show_entries stream=bit_rate \
+                    -of csv=p=0 \
+                    merged/merged.mp3)
+          
+          # Nếu file gốc là VBR và ffprobe trả về "N/A", fallback về VBR chất lượng cao
+          if [ -z "$BITRATE" ] || [ "$BITRATE" = "N/A" ]; then
+            echo "⚠️  Không đọc được bitrate – dùng VBR chất lượng cao (q=0)."
+            ffmpeg -i merged/merged.mp3 \
+              -filter:a "atempo=$SPEED,volume=$VOLUME" \
+              -c:a libmp3lame -q:a 0 \
+              adjusted/audio_adjusted.mp3
+          else
+            echo "➡️  Mã hoá lại ở $BITRATE bps (giữ nguyên như gốc)."
+            ffmpeg -i merged/merged.mp3 \
+              -filter:a "atempo=$SPEED,volume=$VOLUME" \
+              -c:a libmp3lame -b:a ${BITRATE} \
+              adjusted/audio_adjusted.mp3
+          fi
+
       - name: ✍️ Tạo phụ đề SRT
         run: |
           whisper adjusted/audio_adjusted.mp3 \
