--- a/.github/workflows/create-slide-from-content.yml
+++ b/.github/workflows/create-slide-from-content.yml
@@ -1,6 +1,11 @@
 name: 📑 Generate Slides from content.txt (NLP Split)
 
 on:
+  workflow_call:
+    inputs:
+      env: { required: true,  type: string }
+      folder_url: { required: true,  type: string }
+      video_number: { required: true,  type: string }
   workflow_dispatch:
     inputs:
       env:
