UPDATE wf: create-slide-from-content.yml ADD workflow_call

--- a/.github/workflows/create-slide-from-content.yml
+++ b/.github/workflows/create-slide-from-content.yml
@@ -3,9 +3,15 @@ name: 📑 Generate Slides from content.txt (NLP Split)
 on:
   workflow_call:
     inputs:
-      env:           { required: true,  type: string }
-      folder_url:    { required: true,  type: string }
-      video_number:  { required: true,  type: string }
+      env:
+        required: true
+        type: string
+      folder_url:
+        required: true
+        type: string
+      video_number:
+        required: true
+        type: string
   workflow_dispatch:
     inputs:
       env:
