--- a/.github/workflows/4.2-process-timing-json.yml
+++ b/.github/workflows/4.2-process-timing-json.yml
@@ -40,7 +40,7 @@ jobs:
       GG_REFRESH_TOKEN:   ${{ secrets.GG_REFRESH_TOKEN }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
-      YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
+      YT_CLIENT_ID:     ${{ secrets.YT_CLIENT_ID }}
       YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
     steps:
       - name: 📅 Checkout source code
@@ -58,7 +58,9 @@ jobs:
       # 1. Setup & download slides.pptx
       # ───────────────────────────────────────────────────────────
       - name: 📦 Install Python deps
-        run: pip install python-pptx google-api-python-client google-auth google-auth-oauthlib
+        run: |
+          pip install python-pptx google-api-python-client google-auth google-auth-oauthlib
+          npm install fs-extra minimist
 
       - name: 📥 Download slides.pptx from Drive
         run: |
