--- a/.github/workflows/verify_alignment.yml
+++ b/.github/workflows/verify_alignment.yml
@@ -55,7 +55,9 @@ jobs:
 
     # 3. Cài Python packages cho Google Drive API
     - name: 🐍 Install Google API packages
-      run: pip install --quiet google-auth google-api-python-client
+      run: |
+        pip install --quiet google-auth google-api-python-client
+        npm install fs-extra compromise
 
     # 4. Tải transcript.srt & content.txt về thư mục input/
     - name: ⬇️ Download transcript.srt & content.txt
