--- a/.github/workflows/5.1process-audio.yml
+++ b/.github/workflows/5.1process-audio.yml
@@ -43,7 +43,6 @@ jobs:
       FOLDER_URL: ${{ inputs.folder_url }}
       VIDEO_NUMBER: ${{ inputs.video_number }}
       CONFIG_JSON: ${{ vars.CONFIG_JSON }}
-      TRANSCRIPT_SRT: ${{ vars.TRANSCRIPT_SRT }}
       YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
       YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
       YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
@@ -106,7 +105,6 @@ jobs:
           pip install --upgrade pip
 
       - name: 🔧 Cài đặt Whisper (nếu cần tạo phụ đề)
-        if: ${{ vars.TRANSCRIPT_SRT == 'true' }}
         run: |
           pip install setuptools-rust openai-whisper
 
@@ -143,7 +141,6 @@ jobs:
           fi
 
       - name: ✍️ Tạo phụ đề SRT
-        if: ${{ vars.TRANSCRIPT_SRT == 'true' }}
         run: |
           whisper adjusted/audio_adjusted.mp3 \
             --model "$WHISPER_MODEL" \
@@ -152,7 +149,6 @@ jobs:
             --output_dir output --task transcribe
 
       - name: 🏷️ Đổi tên & di chuyển file phụ đề SRT
-        if: ${{ vars.TRANSCRIPT_SRT == 'true' }}
         run: |
           mkdir -p srt_files
           mv output/audio_adjusted.srt srt_files/video_caption.srt
@@ -163,10 +159,7 @@ jobs:
 
       - name: ☁️ Upload lên Google Drive
         run: |
-          export UPLOAD_FILES="audio_adjusted.mp3"
-          if [ "$TRANSCRIPT_SRT" = "true" ]; then
-            UPLOAD_FILES="$UPLOAD_FILES transcript.srt"
-          fi
+          export UPLOAD_FILES="audio_adjusted.mp3 transcript.srt"
           python scripts/upload_results_to_drive.py
 
       - name: 🚀 Gửi tin nhắn Telegram
