--- a/.github/workflows/5.1process-audio.yml
+++ b/.github/workflows/5.1process-audio.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: 🏁 Tạo link đến workflow run
         run: |
-          echo "RUN_URL=https://github.com/${{  github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
+          echo "RUN_URL=https://github.com/ ${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: "📩 Notify: Start processing AUDIO"
         run: |
@@ -83,14 +83,32 @@ jobs:
       - name: 🐍 Install Python & Google API packages
         run: pip install google-auth google-api-python-client
 
-      - name: ⬇️ Download audio.zip & content.txt from Google Drive folder
+      - name: ⬇️ Download audio.zip or audio.wav
         run: |
-          python scripts/download_drive_folder_files.py audio.zip content.txt
+          python scripts/download_drive_folder_files.py audio.zip audio.wav || true
 
-      - name: 📁 Kiểm tra file tải về
-        run: ls -lh input/
+      - name: "🧪 Kiểm tra: có ít nhất 1 trong 2 file audio.zip/audio.wav"
+        run: |
+          if [ ! -f input/audio.zip ] && [ ! -f input/audio.wav ]; then
+            echo "❌ Không tìm thấy cả audio.zip và audio.wav trong thư mục input/"
+            exit 1
+          else
+            echo "✅ Có ít nhất một file audio.zip hoặc audio.wav"
+          fi
+
+      - name: 🧪 Kiểm tra file audio.wav tồn tại không
+        id: check_audio_wav
+        run: |
+          if [ -f input/audio.wav ]; then
+            echo "AUDIO_SOURCE=wav" >> $GITHUB_ENV
+            mkdir -p merged
+            cp input/audio.wav merged/merged.mp3
+          else
+            echo "AUDIO_SOURCE=mp3" >> $GITHUB_ENV
+          fi
 
       - name: 📂 Giải nén file audio.zip
+        if: env.AUDIO_SOURCE == 'mp3'
         run: |
           rm -rf audio merged
           mkdir -p audio merged
@@ -98,23 +116,20 @@ jobs:
           find audio -maxdepth 1 -type f -name "*.mp3" | sort -V > merged/sorted.txt
           cat merged/sorted.txt
 
-      - name: 🛠️ Cài đặt FFMPEG
-        run: |
-          sudo apt update
-          sudo apt install -y ffmpeg
-          pip install --upgrade pip
-
-      - name: 🔧 Cài đặt Whisper (nếu cần tạo phụ đề)
-        run: |
-          pip install setuptools-rust openai-whisper
-
       - name: 🔗 Nối tất cả file .mp3
+        if: env.AUDIO_SOURCE == 'mp3'
         run: |
           mkdir -p merged
           while read f; do
             echo "file '$PWD/$f'" >> merged/list.txt
           done < merged/sorted.txt
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
+
+      - name: 🛠️ Cài đặt FFMPEG & Whisper
+        run: |
+          sudo apt update
+          sudo apt install -y ffmpeg
+          pip install --upgrade pip setuptools-rust openai-whisper
 
       - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
         run: |
