--- a/.github/workflows/5.1process-audio.yml
+++ b/.github/workflows/5.1process-audio.yml
@@ -101,8 +101,8 @@ jobs:
         run: |
           if [ -f input/audio.wav ]; then
             echo "AUDIO_SOURCE=wav" >> $GITHUB_ENV
-            mkdir -p adjusted
-            cp input/audio.wav adjusted/audio_adjusted.mp3
+            mkdir -pv adjusted
+            cp -v input/audio.wav adjusted/audio_adjusted.mp3
           else
             echo "AUDIO_SOURCE=mp3" >> $GITHUB_ENV
           fi
